Grunt sass and uglify

--- a/app/templates/src/App/ClientBundle/Resources/views/base.html.twig
+++ b/app/templates/src/App/ClientBundle/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    {% stylesheets '@AppClientBundle/Resources/public/css/*' filter='cssrewrite' %}
+    {% stylesheets '@AppClientBundle/Resources/public/css/*.css' filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
@@ -13,7 +13,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
-    {% javascripts '@AppClientBundle/Resources/public/js/*' %}
+    {% javascripts '@AppClientBundle/Resources/public/js/*.js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
