--- a/app/templates/src/App/ClientBundle/Resources/views/Page/templates/intro.html
+++ b/app/templates/src/App/ClientBundle/Resources/views/Page/templates/intro.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-body">
 		<h2>{{ pagina2 }} : 2 : [[ pagina ]]</h2>
-		<a class="btn btn-default" ng-click="gotoView('timeline')">CAMBIAR<1></a>
+		<a class="btn btn-default" ng-click="gotoView('page1_1')">PAGE1</a>
 	</div>
 </div>
