--- a/app/templates/src/App/ClientBundle/Resources/views/Page/home.html.twig
+++ b/app/templates/src/App/ClientBundle/Resources/views/Page/home.html.twig
@@ -5,13 +5,15 @@
 {% block content %}
 
   <div id="container" class="container">
-    {% include 'AppClientBundle::Page/modules/page1_1.html.twig' %}
-    {% include 'AppClientBundle::Page/modules/page1_2.html.twig' %}
+    {% include 'AppClientBundle::Page/modules/slideA.html.twig' %}
+    {% include 'AppClientBundle::Page/modules/slideB.html.twig' %}
     <div class="row">
       <div class="col-xs-12">
         <div ng-view></div>
       </div>
     </div>
   </div>
+
+  <script>var title="{{ title }}";</script>
 
 {% endblock %}
