--- a/app/templates/src/App/ClientBundle/Resources/css/styles.sass
+++ b/app/templates/src/App/ClientBundle/Resources/css/styles.sass
@@ -1,90 +1,62 @@
-$color1 : black
-$color2 : #EEE5D8
-$color3 : dimgrey
+$base_font-family : Arial, Helvetica, sans-serif
+$base_font-size : 14px
 
-$web_padding : 50px
+$color1 : black
+$color2 : white
+$color3 : dimgrey
+$color3 : darkgrey
+
 $web_width : 1040px
 
+*
+  box-sizing : border-box
 html, body
-	background : $color3
-	height : 100%
-	font-family : Arial, Helvetica, sans-serif
-	font-size : 14px
-	color : $color2
+  position : relative
+  height : 100%
+  padding : 0
+  margin : 0
+  background : $color2
+  font-family : $base_font-family
+  font-size : $base_font-size
+  color : $color1
 #wrapper
-	display : table
-	width : 100%
-	height : 100%
-	min-height : 100%
-	#wrapper-inner
-		display : table-cell
-		vertical-align : middle
-		header, footer
-			position : absolute
-			left : $web_padding
-			right : $web_padding
-			text-transform : uppercase
-			nav ul
-				padding : 0
-			nav ul li
-				display : inline-block
-				a
-					text-decoration : none
-					color : $color2
-					font-size : 12px
-		header
-			top : 50px
-			#logo-box
-				position : absolute
-				top : 0px
-				left : 0px
-			nav
-				position : absolute
-				top : 0px
-				right : 0px
-			nav ul li
-				margin-left : 35px
-				span
-					margin : 0 20px
-		footer
-			bottom : $web_padding
-			nav
-				position : absolute
-				bottom : 0px
-				left : 0px
-			nav ul li
-				margin-right : 35px
-			#ean-box
-				position : absolute
-				bottom : 0px
-				right : 0px
-		#content
-			position : relative
-			text-align : center
-			width : 100%
-		#background
-			position : absolute
-			width : 100%
-			height : 100%
-			top : 0
-			left : 0
-			overflow : hidden
-			img
-				position : absolute
-				top : 50%
-				left : 50%
-				transform : translateX(-50%) translateY(-50%)
-				min-width : 100%
-				min-height : 100%
-				width : auto
-				height : auto
-			#bgVideo
-				position : absolute
-				top : 50%
-				left : 50%
-				transform : translateX(-50%) translateY(-50%)
-				min-width : 100%
-				min-height : 100%
-				width : auto
-				height : auto
+  display : table
+  width : 100%
+  height : 100%
+  min-height : 100%
+  header, footer
+    display : table-row
+    height : 1px
+    width : 100%
+    text-align : center
+    background-color : $color1
+    text-transform : uppercase
+    color : $color3
+    padding : 20px
+    nav ul
+      padding : 0
+    nav ul li
+      display : inline-block
+      a
+        text-decoration : none
+        color : $color2
+  header
+    position : relative
+    #logo-box
+      margin : auto
+    nav
+      position : absolute
+      top : 10px
+      right : 30px
+      ul li
+        margin-left : 25px
+  footer
+    margin-top : 50px
+  #content
+    display : table-row
+    position : relative
+    text-align : center
+    width : $web_width
+    margin : auto
+
 
